Set max-width for article images to 100% on mobile to prevent them from exceeding content container

--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,14 @@ body {
   }  
 }
 
+@media (max-width: 480px) {
+  .blog>p>img{
+    display: block;
+    max-width: 100%;
+    margin: auto;
+  }  
+}
+
 .blog-index-item {
   display: flex;
   flex-direction: column;
